--- a/Tajan.Application/Tajan.Application.csproj
+++ b/Tajan.Application/Tajan.Application.csproj
@@ -7,10 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Common\**" />
+    <EmbeddedResource Remove="Common\**" />
+    <None Remove="Common\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Behaviors\" />
+    <Folder Include="Helpers\" />
     <Folder Include="Validation\" />
     <Folder Include="Mapping\" />
-    <Folder Include="Common\" />
   </ItemGroup>
 
   <ItemGroup>
