install package: tajan packages mapperly mediatR

--- a/Tajan.Infrastruture/Tajan.Infrastructure.External/Tajan.Infrastructure.External.csproj
+++ b/Tajan.Infrastruture/Tajan.Infrastructure.External/Tajan.Infrastructure.External.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Configuraions\" />
   </ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\..\Tajan.Application\Tajan.Application.csproj" />
+		<ProjectReference Include="..\..\Tajan.Domain\Tajan.Domain.csproj" />
+	</ItemGroup>
 </Project>
