--- a/Tajan.Application/Tajan.Application.csproj
+++ b/Tajan.Application/Tajan.Application.csproj
@@ -20,6 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="Riok.Mapperly" Version="4.2.1" />
+    <PackageReference Include="Tajan.DotNetCore.Common" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Tajan.Domain\Tajan.Domain.csproj" />
   </ItemGroup>
 
