--- a/Tajan.Domain/Tajan.Domain.csproj
+++ b/Tajan.Domain/Tajan.Domain.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Enums\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Tajan.DotNetCore.Repositories.Abstractions" Version="9.0.1" />
+  </ItemGroup>
+
 </Project>
